syntax = "proto3";
option csharp_namespace = "Server.Protos";
 import "google/protobuf/struct.proto";
 import "google/protobuf/any.proto";


service GrpcService {
 
  rpc GetInfo (GrpcRequest) returns (stream GrpcResponse) {}

}
 
message GrpcRequest {
      google.protobuf.Any payload = 1;
}

message GrpcResponse {
  string type=1;
}
